correction contrast 1

--- a/style.css
+++ b/style.css
@@ -763,7 +763,7 @@ h4 {
 }
 
 .black-background {
-	background-color: rgba(165, 147, 99, 0.85);
+	background-color: rgba(157, 153, 142, 0.85);
 	padding: 40px 40px 40px 40px;
 }
 
